# nfl_confidence

./: .gitignore  Makefile  README.md  example_config.json  get_spread_rankings.sh  pyproject.toml  rank_games.py  read_google_sheet_auth.py  requirements.txt  update_odds.py  utils.py
.github/workflows/: ci.yaml
config/: name_maps.json
nfl_confidence/: html_parsers.py  odds.py  settings.py  utils.py
nfl_confidence/assets/: team_names.json
nfl_confidence/html_parsers/: espn.py  fte.py  utils.py
scripts/: compare_sources.py  plot_league_results.py  print_confidence.py  update_google_sheet.py  write_confidence.py  write_google_sheet.py
tests/: conftest.py  test_odds.py  test_settings.py  test_utils.py
tests/assets/: the_odds_american.json  the_odds_decimal.json
