[tool.poetry]
name = "nfl_confidence"
version = "0.1.0"
description = ""
authors = ["Luke Ross <lukeross@umich.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.3"
gspread = "^4.0.1"
numpy = "^1.21.2"
requests = "^2.26.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"
flake8 = "^3.9.2"
pytest = "^6.2.5"
coverage = "^5.5"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
